--- a/src/app/components/tour-details/tour-book/tour-book.component.html
+++ b/src/app/components/tour-details/tour-book/tour-book.component.html
@@ -23,7 +23,7 @@
         <div class="row">
           <div class="col">
             <label for="seats">Sitzplätze</label>
-            <select #seatSelect name="" id="seats" class="form-control">
+            <select #seatSelect name="" id="seats" class="form-control" (change)="calcPrice(seatSelect.value, storSelect.value)">
               <option value="{{seat}}" *ngFor="let seat of this.seats; let i = index">{{seat}}</option>
             </select>
           </div>
@@ -32,12 +32,18 @@
         <div class="row">
           <div class="col">
             <label for="storage">Stauraum</label>
-            <select #storSelect name="" id="storage" class="form-control">
+            <select #storSelect name="" id="storage" class="form-control" (change)="calcPrice(seatSelect.value, storSelect.value)">
               <option value="{{storage}}" *ngFor="let storage of this.storage; let i = index">{{storage}}</option>
             </select>
           </div>
         </div>
 
+        <div class="row mt-4">
+          <div class="col">
+
+            <div class="h5 text-center logoGreenDark">Kosten: {{this.price}}€ </div>
+          </div>
+        </div>
       </div>
     </div>
 
