added confirm deletion modal in profil

--- a/src/app/components/profil/loggedin/confirm-delete-account/confirm-delete-account.component.html
+++ b/src/app/components/profil/loggedin/confirm-delete-account/confirm-delete-account.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-2"></div>
       <div class="col-8 justify-content-center">
-        <div class="modal-title text-center h4 mx-auto logoGreenDark">Diese Fahrt unwideruflich löschen?</div>
+        <div class="modal-title text-center h4 mx-auto logoGreenDark">Diesen Account unwideruflich löschen?</div>
       </div>
       <div class="col-1"></div>
       <div class="col-1 p-0">
