--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="mt-3">
-        <button class=" red" (click)="deleteAccount()">Account löschen</button>
+        <button class=" red" (click)="openDeleteModal()">Account löschen</button>
       </div>
     </div>
 
